Update pom.xml in runtime to use local maven repository

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -28,7 +28,14 @@
                 </dependency>
             </dependencies>
         </profile>
-    </profiles>
+      </profiles>
+
+    <repositories>
+        <repository>
+            <id>local-maven-repo</id>
+            <url>file:///${user.dir}/local-maven-repo</url>
+        </repository>
+    </repositories>
 
     <dependencies>
 
