--- a/pom.xml
+++ b/pom.xml
@@ -605,6 +605,7 @@
                         <exclude>${exclude.tests.mimeType}</exclude>
                         <exclude>**/MSecurityManagerTest.java</exclude>
                         <exclude>**/SandboxFromJUnitTest.java</exclude>
+                        <exclude>com/examples/with/different/packagename/**/*.java</exclude>
                     </excludes>
                     <argLine>-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading -Xms512m -Xmx4096m --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
