--- a/pom.xml
+++ b/pom.xml
@@ -167,34 +167,40 @@
             </reporting>
         </profile>
         <profile>
-            <id>Java-9</id>
+            <id>modern</id>
             <activation>
-                <jdk>[9,)</jdk>
+                <jdk>[11,)</jdk>
             </activation>
             <properties>
                 <compiler.target>1.8</compiler.target>
                 <compiler.source>1.8</compiler.source>
                 <exclude.tests.concolic>**/*Concolic*.java</exclude.tests.concolic>
                 <exclude.tests.mimeType>**/*TestMIMEType.java</exclude.tests.mimeType>
+                <!-- Mockito 5+ requires Java 11+ -->
+                <mockito.version>5.21.0</mockito.version>
+                <!-- Byte Buddy 1.17.5+ required for Java 24/25 support -->
+                <bytebuddy.version>1.17.5</bytebuddy.version>
+                <!-- Logback 1.3+ requires Java 11+ -->
+                <logback.version>1.5.27</logback.version>
             </properties>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
                         <groupId>org.mockito</groupId>
                         <artifactId>mockito-core</artifactId>
-                        <version>5.21.0</version>
+                        <version>${mockito.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>ch.qos.logback</groupId>
                         <artifactId>logback-classic</artifactId>
-                        <version>1.5.27</version>
+                        <version>${logback.version}</version>
                         <optional>true</optional>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
         </profile>
         <profile>
-            <id>Java-8</id>
+            <id>java8</id>
             <activation>
                 <jdk>1.8</jdk>
             </activation>
@@ -203,6 +209,9 @@
                 <compiler.source>1.8</compiler.source>
                 <exclude.tests.concolic />
                 <exclude.tests.mimeType />
+                <mockito.version>4.11.0</mockito.version>
+                <bytebuddy.version>1.12.23</bytebuddy.version>
+                <logback.version>1.2.13</logback.version>
             </properties>
         </profile>
     </profiles>
@@ -254,7 +263,7 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <!-- For Java 8 compatibility, use 1.2.x. 1.3+ requires Java 11 -->
-                <version>1.2.13</version>
+                <version>${logback.version}</version>
                 <optional>true</optional>
             </dependency>
             <dependency>
@@ -262,7 +271,17 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <!-- For Java 8 compatibility, use 4.x. 5+ requires Java 11 -->
-                <version>4.11.0</version>
+                <version>${mockito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${bytebuddy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${bytebuddy.version}</version>
             </dependency>
             <dependency>
                 <!-- Common Public License Version 1.0 -->
@@ -735,6 +754,9 @@
                             <configuration>
                                 <shadedArtifactAttached>false</shadedArtifactAttached>
                                 <createDependencyReducedPom>true</createDependencyReducedPom>
+                                <transformers>
+                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                </transformers>
                                 <!-- do not change "org.evosuite.shaded." as it used in some of the java classes -->
                                 <relocations>
                                     <relocation>
@@ -833,6 +855,10 @@
 
         <compiler.target>1.8</compiler.target>
         <compiler.source>1.8</compiler.source>
+
+        <mockito.version>4.11.0</mockito.version>
+        <bytebuddy.version>1.12.23</bytebuddy.version>
+        <logback.version>1.2.13</logback.version>
 
         <jaxb.version>2.3.0</jaxb.version>
         <activation.version>1.2.0</activation.version>
