Add initial implementations of mock classes for newer Java versions

--- a/master/pom.xml
+++ b/master/pom.xml
@@ -73,6 +73,32 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>modern-master</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-modern-master</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <classifier>${publish.classifier}</classifier>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <!-- dependency versions are inherited from parent pom -->
