--- a/client/pom.xml
+++ b/client/pom.xml
@@ -56,8 +56,8 @@
             <artifactId>asm-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.opencsv</groupId>
