--- a/master/pom.xml
+++ b/master/pom.xml
@@ -22,7 +22,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>jaxb2-maven-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>2.5.0</version>
                         <executions>
                             <execution>
                                 <id>xjc</id>
@@ -32,7 +32,16 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <schemaDirectory>${project.basedir}/src/main/resources/xsd</schemaDirectory>
+                            <sources>
+                                <source>${project.basedir}/src/main/resources/xsd</source>
+                            </sources>
+                            <xjcSourceExcludeFilters>
+                                <filter implementation="org.codehaus.mojo.jaxb2.shared.filters.pattern.PatternFileFilter">
+                                    <patterns>
+                                        <pattern>\.xml$</pattern>
+                                    </patterns>
+                                </filter>
+                            </xjcSourceExcludeFilters>
                             <packageName>org.evosuite.xsd</packageName>
                         </configuration>
                         <dependencies>
@@ -56,7 +65,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>jaxb2-maven-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>2.5.0</version>
                         <executions>
                             <execution>
                                 <id>xjc</id>
@@ -66,7 +75,16 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <schemaDirectory>${project.basedir}/src/main/resources/xsd</schemaDirectory>
+                            <sources>
+                                <source>${project.basedir}/src/main/resources/xsd</source>
+                            </sources>
+                            <xjcSourceExcludeFilters>
+                                <filter implementation="org.codehaus.mojo.jaxb2.shared.filters.pattern.PatternFileFilter">
+                                    <patterns>
+                                        <pattern>\.xml$</pattern>
+                                    </patterns>
+                                </filter>
+                            </xjcSourceExcludeFilters>
                             <packageName>org.evosuite.xsd</packageName>
                         </configuration>
                     </plugin>
@@ -167,17 +185,13 @@
             <artifactId>commons-cli</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
         </dependency>
         <dependency>
             <!-- GPL, but classpath exception -->
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
